--- a/src/admin/admin.html
+++ b/src/admin/admin.html
@@ -191,8 +191,7 @@
               </div>
             </div>
           </div>
-
-          <!-- 차트 영역 추가 -->
+        </div>
 
         <!-- 수업 등록 페이지 -->
         <div class="page" id="register-page">
